SERVER-175: add grade_id in study report api
